# catcon

./: .gitignore  catcon.cabal
src/Control/: SmallCategory.hs
src/Control/Control/: Block.hs
src/Control/Monoidal/: ArrowTranslator.lhs  Associative.lhs  Binoidal.lhs  Braided.lhs  Cartesian.hs  GBifunctor.lhs  Isomorphism.hs  Monoidal.lhs  Reified.hs  Scalars.hs
src/Data/Stream/: BiStream.hs
