name: catcon
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: PublicDomain
maintainer: sophie@traumapony.org
synopsis: Categorical control theory, signal processing, and FRP
category: Control
author: Sophie Taylor
data-dir: ""

library
    build-depends: base >=4.7
    exposed-modules: Control.Control.Block Control.Monoidal.Associative
                     Control.Monoidal.Braided Control.Monoidal.GBifunctor
                     Control.Monoidal.Binoidal Control.Monoidal.ArrowTranslator
                     Control.Monoidal.Isomorphism Control.Monoidal.Monoidal
                     Data.Stream.BiStream
    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src


