name: catcon
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: PublicDomain
license-file: ""
maintainer: sophie@traumapony.org
synopsis: Categorical control theory, signal processing, and FRP
category: Control
author: Sophie Taylor
data-dir: ""

library
    build-depends: base >=4.7
    exposed-modules: Control.Control.Block Control.Monoidal.Associative
                     Control.Monoidal.Braided Control.Monoidal.Cartesian
                     Control.Monoidal.GBifunctor Control.Monoidal.Binoidal
                     Control.Monoidal.ArrowTranslator Control.Monoidal.Isomorphism
                     Control.Monoidal.Monoidal Control.Monoidal.Scalars
                     Control.SmallCategory Data.Stream.BiStream Control.Monoidal.Reified
    exposed: True
    buildable: True
    default-language: Haskell2010
    default-extensions: DefaultSignatures MultiParamTypeClasses FunctionalDependencies
                        FlexibleInstances FlexibleContexts UndecidableInstances PolyKinds
                        ConstraintKinds InstanceSigs TypeFamilies RankNTypes TypeOperators DataKinds ExistentialQuantification
    hs-source-dirs: src
    ghc-options: -fprint-explicit-kinds


